--- a/source/themes/custom/crescenttool/styles/libraries/node/search-index.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/search-index.scss
@@ -134,3 +134,18 @@
     }
   }
 }
+
+.region-post-content {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+  max-width: 100%;
+  padding-bottom: 3.75rem;
+  width: 100%;
+
+  .view-content {
+    max-width: 75em;
+    width: calc(100% - 2rem);
+    margin-left: auto !important;
+    margin-right: auto !important;
+  }
+}
