VYRKCATG-305-ct-media-center-landing-page-styling - make media page item teasers match search result cards
- Created mixin to hold shared "view card" styles seen in search results and media item listings
- added a card button mixin
- replaced common "card" styles with the new mixin in product search results and media item listings

--- a/source/themes/custom/crescenttool/styles/abstracts/mixins/_button.scss
+++ b/source/themes/custom/crescenttool/styles/abstracts/mixins/_button.scss
@@ -72,3 +72,45 @@
     }
   }
 }
+
+@mixin card-btn {
+  box-sizing: border-box;
+  display: inline-block !important;
+  float: none;
+  font-size: 1rem !important;
+  transition: $transition-base;
+  width: 100%;
+  border: 1px solid $primary-red;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  white-space: normal;
+  min-width: 100%;
+  border-bottom-left-radius: rem(25px);
+  border-bottom-right-radius: rem(25px);
+
+  @include media('<md') {
+    font-size: rem(13px) !important;
+  }
+
+  > small {
+    line-height: 1.625;
+    font-weight: $fw-bold;
+
+    &:hover,
+    &:focus {
+      color: $white;
+      font-weight: $fw-bold;
+    }
+  }
+
+  &:hover,
+  &:focus {
+    background-color: $gray-50;
+    border-radius: 0;
+    border-bottom-left-radius: rem(25px);
+    border-bottom-right-radius: rem(25px);
+    color: $primary-red;
+    font-family: 'Industry';
+    font-weight: $fw-bold;
+  }
+}
