Added some changes for the new products view.

--- a/source/themes/custom/crescenttool/styles/abstracts/mixins/_typography.scss
+++ b/source/themes/custom/crescenttool/styles/abstracts/mixins/_typography.scss
@@ -35,7 +35,7 @@
   // Include if the globals only if explicitly included.
   @if $globals == included {
     font-family: $font-brand;
-    font-weight: $fw-medium;
+    font-weight: $fw-extra-bold;
     letter-spacing: inherit;
     line-height: 1.2;
     margin: 1.25rem 0 0.5rem;
