--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--content.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--content.scss
@@ -209,3 +209,29 @@
     }
   }
 }
+
+// classy paragraph cta styles
+.button-cta {
+  .component-content__link.button {
+    @include btn-reset();
+    @include btn-base();
+    display: inline-flex;
+    margin-top: 2rem;
+
+    &:hover {
+      background-color: $primary-dark;
+      color: $white;
+      border: 1px solid $primary-red;
+    }
+
+    &:after {
+      display: none;
+    }
+  }
+}
+
+.text-cta {
+  .component-content__link.button {
+    @include btn(secondary);
+  }
+}
