VYRKCATG-57 ct our-tools category grid styles
- extracted view card border radius styles into a mixin
- created a new compact version of the view card for things like all-tools grid
- extracted the compact version into a mixin
- added new stylesheet for the brand card grid
- updated the libraries in theme to add the styles for this view

--- a/source/themes/custom/crescenttool/styles/libraries/view/product-brand-grid.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/view/product-brand-grid.scss
@@ -14,12 +14,8 @@
  * View
  */
 
-[about='/tools/all-tools'] {
-  margin-bottom: rem(70px);
-}
+.view-product-brand-grid {
 
-.view-product-category-grid {
-
-  @include view-cards-compact('.node--type-product-category');
+  @include view-cards-compact('.node--type-product-brand');
 
 }
