--- a/source/themes/custom/crescenttool/styles/abstracts/mixins/_cards.scss
+++ b/source/themes/custom/crescenttool/styles/abstracts/mixins/_cards.scss
@@ -4,18 +4,39 @@
 // @include view-cards('.my-card-button-class')
 // -----------------------------------------------------------------------------
 
+$radius-mobile: rem(11px);
+$radius-desktop: rem(25px);
+
+@mixin view-cards-radius {
+  border-top-left-radius: $radius-mobile;
+  border-top-right-radius: $radius-mobile;
+
+  @include media('>=md') {
+    border-top-left-radius: $radius-desktop;
+    border-top-right-radius: $radius-desktop;
+  }
+}
+
+@mixin view-cards-radius-bottom {
+  border-bottom-left-radius: $radius-mobile;
+  border-bottom-right-radius: $radius-mobile;
+
+  @include media('>=md') {
+    border-bottom-left-radius: $radius-desktop;
+    border-bottom-right-radius: $radius-desktop;
+  }
+}
+
 @mixin view-cards($button-class) {
   .node__content {
-    border-top-left-radius: rem(11px);
-    border-top-right-radius: rem(11px);
     padding: rem(3px 3px 0 3px);
     background-color: $gray-20;
 
     @include media('>=md') {
       padding: rem(10px 10px 0 10px);
-      border-top-left-radius: rem(25px);
-      border-top-right-radius: rem(25px);
     }
+
+    @include view-cards-radius;
 
     .node__listing-image {
       @include flex();
@@ -133,5 +154,90 @@
     @include btn(primary);
 
     @include card-btn;
+  }
+}
+
+@mixin view-cards-compact ($node-class) {
+
+  #{$node-class} {
+    @include view-cards-radius;
+    @include view-cards-radius-bottom;
+    overflow: hidden;
+
+    @include on-event {
+      .btn {
+        color: $primary-red;
+        background: $gray-10;
+      }
+
+      .node__inner .node__grid-title::after {
+        display: none;
+      }
+    }
+  }
+
+  .view-content {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: rem(25px); // sass-lint:disable-line no-misspelled-properties
+
+    @include media('>=md') {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+
+    @include media('>=lg') {
+      grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+
+    @include on-event {
+      .node__content {
+        background-color: transparent;
+      }
+    }
+
+    @include view-cards('.btn');
+
+    .node__content {
+      background: none;
+      padding: 0;
+
+      @include on-event {
+        .node__media {
+          background-color: $black;
+        }
+      }
+
+      .node__media {
+        @include view-cards-radius;
+        background: $gray-20;
+        transition: background-color 0.3s ease;
+      }
+
+      .media {
+        @include view-cards-radius;
+        @include view-cards-radius-bottom;
+        overflow: hidden;
+      }
+
+      .blazy {
+        overflow: hidden;
+        padding: rem(12px);
+      }
+
+      .btn {
+        font-size: 20px !important;
+        padding-left: rem(5px);
+        padding-right: rem(5px);
+        min-height: rem(80px);
+        display: flex !important;
+        justify-content: center;
+        align-items: center;
+
+        @include on-event {
+          color: $primary-red;
+          background: $gray-10;
+        }
+      }
+    }
   }
 }
