VYRKCATG-209: Fixing some height issues.

--- a/source/themes/custom/crescenttool/styles/libraries/view/related-products.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/view/related-products.scss
@@ -79,7 +79,7 @@
           left: rem(-98px);
 
           @include media('<1401px') {
-            left: rem(-58px);
+            left: rem(-74px);
           }
 
           @include media('<1336px') {
@@ -92,7 +92,7 @@
           right: rem(-98px);
 
           @include media('<1400px') {
-            right: rem(-58px);
+            right: rem(-74px);
           }
 
           @include media('<1336px') {
@@ -120,7 +120,7 @@
         color: $primary-red;
         font-size: rem(30px);
         display: none;
-        height: 0;
+        height: 2.75rem;
         width: 5rem;
         margin: 0;
         padding: 0;
