--- a/source/themes/custom/crescenttool/styles/libraries/node/teaser--media-page.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/teaser--media-page.scss
@@ -31,7 +31,10 @@
     }
 
     .node__content-container {
-      min-height: 18rem;
+      min-height: 15rem;
+      @include media('>=md') {
+        min-height: 18rem;
+      }
     }
 
     .node__listing-image {
@@ -49,7 +52,7 @@
           height: 100%;
           width: 100%;
         }
-        
+
       }
 
     }
