--- a/source/themes/custom/crescenttool/styles/libraries/node/full--product-brand.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/full--product-brand.scss
@@ -18,6 +18,10 @@
   .pager {
     grid-column-start: 2;
     grid-column-end: 4;
+
+    @include media('<md') {
+      grid-column-start: 1;
+    }
   }
 
   .page-heading {
