VYRKCATG-306: Created the Product Set Components output.

--- a/source/themes/custom/crescenttool/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/full--product.scss
@@ -422,6 +422,7 @@ $tabs-border-width-active: rem(5px);
               font-family: $font-brand;
               color: $secondary-black;
               margin-bottom: 1rem;
+              text-transform: uppercase;
 
               ul {
                 margin: 0;
@@ -466,6 +467,14 @@ $tabs-border-width-active: rem(5px);
                   font-family: $font-brand;
                   font-weight: $fw-bold;
                 }
+              }
+            }
+
+            .product-set-components {
+              margin-top: 4rem;
+
+              .node__sku {
+                text-decoration: underline;
               }
             }
           }
