--- a/docroot/themes/custom/crescenttool/templates/node/node--product--full.html.twig
+++ b/docroot/themes/custom/crescenttool/templates/node/node--product--full.html.twig
@@ -176,6 +176,16 @@
                 {{ 'Features'|t }}
               </div>
               {{ content.field_product_features }}
+
+              {% if (content.field_set_components) %}
+              <div class="product-set-components">
+                <div class="node--type-product__accordion-content-header">
+                  {{ 'Contains' }}
+                </div>
+
+                {{ content.field_set_components }}
+              </div>
+              {% endif %}
             </div>
           </section>
 
@@ -228,7 +238,7 @@
         {{ related_items }}
       {% endif %}
 
-      {{ content|without('field_long_description','field_product_images', 'field_product_features', 'field_product_specifications', 'field_media',) }}
+      {{ content|without('field_long_description','field_product_images', 'field_product_features', 'field_product_specifications', 'field_media', 'field_set_components') }}
     </div>
   </div>
 </article>
