Styling and initial logic to make the chips

--- a/source/themes/custom/crescenttool/styles/libraries/node/full--product-category.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/full--product-category.scss
@@ -269,4 +269,28 @@
       }
     }
   }
+  .chips {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    padding-left: 0;
+
+    .chip {
+      background-color: $black;
+      color: $white;
+      margin: 0.2rem;
+      padding: 0.2rem 0.4rem;
+      white-space: nowrap;
+
+      .chip-close-icon {
+
+
+        &::before {
+          font-family: 'themeIcons';
+          content: icon-char('close');
+          margin-left: 1rem;
+        }
+      }
+    }
+  }
 }
