VYRKCATG-305-ct-media-center-landing-page-styling
- making media page teaser image styles apply to a broader set of image divs
- fixing the pager style on media pages

--- a/source/themes/custom/crescenttool/styles/abstracts/mixins/_cards.scss
+++ b/source/themes/custom/crescenttool/styles/abstracts/mixins/_cards.scss
@@ -7,6 +7,15 @@
 $radius-mobile: rem(11px);
 $radius-desktop: rem(25px);
 
+@mixin pager-adjustment {
+  grid-column-start: 2;
+  grid-column-end: 4;
+
+  @include media('<md') {
+    grid-column-start: 1;
+  }
+}
+
 @mixin view-cards-radius {
   border-top-left-radius: $radius-mobile;
   border-top-right-radius: $radius-mobile;
@@ -38,7 +47,7 @@ $radius-desktop: rem(25px);
 
     @include view-cards-radius;
 
-    .node__listing-image {
+    .node__media {
       @include flex();
       @include flex-x(align-items, center);
       @include flex-x(justify-content, center);
