--- a/source/themes/custom/crescenttool/styles/libraries/node/teaser--media-page.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/teaser--media-page.scss
@@ -35,7 +35,7 @@
       min-height: 15rem;
 
       @include media('>=md') {
-        
+
         min-height: 18rem;
 
       }
@@ -76,7 +76,7 @@
     }
   }
 
-  .node__content .node__listing-image .media img {
+  .node__content .node__media .media img {
     object-fit: contain;
   }
 
