VYRKCATG-306b: Fixed "Contains" heading render to not show when it has nothing to show.

--- a/docroot/themes/custom/crescenttool/templates/node/node--product--full.html.twig
+++ b/docroot/themes/custom/crescenttool/templates/node/node--product--full.html.twig
@@ -177,7 +177,7 @@
               </div>
               {{ content.field_product_features }}
 
-              {% if (content.field_set_components) %}
+              {% if content.field_set_components|render|trim|length > 0 %}
               <div class="product-set-components">
                 <div class="node--type-product__accordion-content-header">
                   {{ 'Contains' }}
