VYRKCATG-311-ct-style-brand-pages
- updating the card image selectors so that compact card images aren't targeted by regular card image styles

--- a/source/themes/custom/crescenttool/styles/abstracts/mixins/_cards.scss
+++ b/source/themes/custom/crescenttool/styles/abstracts/mixins/_cards.scss
@@ -47,7 +47,7 @@ $radius-desktop: rem(25px);
 
     @include view-cards-radius;
 
-    .node__media {
+    .node__listing-image, .node__media--no-media {
       @include flex();
       @include flex-x(align-items, center);
       @include flex-x(justify-content, center);
