VYRKCATG-315-ct-hyperlink-highlight-style
- updating the text highlight style
- updating the link hover style

--- a/source/themes/custom/crescenttool/styles/abstracts/mixins/_links.scss
+++ b/source/themes/custom/crescenttool/styles/abstracts/mixins/_links.scss
@@ -20,7 +20,7 @@
 
 @mixin link-base ($style: dark) {
   $color: $secondary-light;
-  $hover-color: $secondary-black;
+  $hover-color: $primary-red;
   $hover-weight: null;
 
   // Light overrides.
