VYRKCATG-209b: Fixed product image slider issues.

--- a/source/themes/custom/crescenttool/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/full--product.scss
@@ -90,6 +90,11 @@ $tabs-border-width-active: rem(5px);
           width: calc(66.6666666667% - 6px);
         }
 
+        .swiper-slide {
+          max-height: 100px;
+          max-width: 100px;
+        }
+
         .swiper-slide-thumb-active {
           outline: 2px solid $primary-red;
           outline-offset: -2px;
