--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--banner-cta-slider.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--banner-cta-slider.scss
@@ -14,18 +14,42 @@
  * Component
  */
 .component-banner-cta-slider {
+  position: relative;
+
+  @include media('>md') {
+    &::after {
+      content: '';
+      clear: both;
+      display: table;
+    }
+
+    .component-banner-cta-slider__thumbs-outer-wrapper {
+      float: left;
+      width: 25%;
+    }
+
+    .component-banner-cta-slider__container {
+      position: absolute;
+      top: 0;
+      right: 0;
+      float: left;
+      width: 75%;
+    }
+  }
+
   .component-banner-cta-slider__container {
-    position: relative;
-    box-shadow: 0 0 16px 5px rgba(0, 0, 0, 0.2);
+    @include media('>md') {
+      box-shadow: 0 0 16px 5px rgba(0, 0, 0, 0.2);
+    }
 
     .component-banner-cta-slider__pseudo-prev-button,
     .component-banner-cta-slider__pseudo-next-button {
       display: none;
+
       @include media('<=md') {
         background: none;
         border: 0;
         color: $primary-red;
-        display: block;
         position: absolute;
         top: calc(50% - .5rem);
         margin: 0;
@@ -59,35 +83,54 @@
     }
 
     .component-banner-cta-slide__content-field {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      background-color: rgba($black, 0.85);
-      color: $white;
-      padding: rem(25px 50px);
-      display: grid;
-      align-items: center;
-      column-gap: 1rem;
-
       .field--type-string {
         font-family: $font-brand;
         font-weight: $fw-medium;
-        font-size: rem(28px);
-        grid-column: 1;
+        font-size: rem(23px);
       }
 
       .field--type-text-long {
         font-size: rem(16px);
-        grid-column: 1;
+        @include media('<=md') {
+          margin-bottom: rem(15px);
+        }
       }
 
       .field--type-link {
-        grid-column: 2;
-        grid-row: 1 / 3;
-
         a {
           @include btn(primary);
+
+          @include media('<=md') {
+            display: flex;
+            justify-content: center;
+          }
+        }
+       }
+
+      @include media('>md') {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: rgba($black, 0.85);
+        color: $white;
+        padding: rem(25px 50px);
+        display: grid;
+        align-items: center;
+        column-gap: 1rem;
+
+        .field--type-string {
+          font-size: rem(28px);
+          grid-column: 1;
+        }
+
+        .field--type-text-long {
+          grid-column: 1;
+        }
+
+        .field--type-link {
+          grid-column: 2;
+          grid-row: 1 / 3;
         }
       }
     }
@@ -96,50 +139,83 @@
   .component-banner-cta-slider__thumbs-outer-wrapper {
     position: relative;
 
-    .component-banner-cta-slider__button {
-      display: none;
+    @include media('>md') {
+      position: relative;
     }
   }
 
   .component-banner-cta-slider__thumbs-container {
-    width: 100%;
+    overflow: visible;
 
-    @include media('>md') {
-      width: calc(66.6666666667% - 6px);
+    .paragraph--type-banner-cta-slide {
+      padding: rem(10px 30px 0 15px);
+      margin-bottom: 0;
+    }
+
+    .field--name-field-text-pagination {
+      text-align: center;
+      font-family: $font-brand;
+      font-weight: $fw-bold;
+      font-size: rem(25px);
+      text-transform: uppercase;
+      line-height: 1.1;
+
+      @include media('>md') {
+        font-size: rem(35px);
+      }
     }
 
     .swiper-slide-thumb-active {
-      outline: 2px solid $primary-red;
-      outline-offset: -2px;
+      background-color: $primary-red;
+
+      &::before,
+      &::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        height: 50%;
+        width: 100%;
+        box-shadow: 0 0 16px 5px rgba(0, 0, 0, 0.2);
+        z-index: -1;
+      }
+
+      &::before {
+        top: 0;
+      }
+
+      &::after {
+        bottom: 0;
+      }
     }
   }
 
   // Button Style Overrides
   .swiper-button-next,
   .swiper-button-prev {
-    display: none;
+    display: block;
+    background: none;
     line-height: 1;
-    font-size: rem(60px);
+    font-size: 1.5rem;
+    color: $primary-red;
+    margin: 0;
+    padding: 0;
+    top: 0;
+
+    @include on-event {
+      color: $primary-dark;
+    }
 
     &::after {
       vertical-align: bottom;
     }
 
-    @include media('>md') {
-      display: block;
-      background: none;
-      color: $primary-red;
-      margin: 0;
-      padding: 0;
-      top: 0;
-
-      @include on-event {
-        color: $primary-dark;
-      }
-    }
-
     &[aria-disabled='true'] {
       color: $gray-30;
+    }
+
+    @include media('>md') {
+      display: none;
+      background: none;
     }
   }
 
