VYRKCATG-320-ct-add-hover-style-for-in-text-ctas
fixing the hover state for content component cta buttons

--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--content.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--content.scss
@@ -77,10 +77,7 @@
   .component-content__link.button {
     @include btn(secondary);
     color: $secondary-black;
-
-    @include on-event() {
-      color: $secondary-light;
-    }
+    line-height: 1;
   }
 
   // Media layout classy styles.
