added image slider height css

--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--banner-cta-slider.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--banner-cta-slider.scss
@@ -38,6 +38,10 @@
   .component-banner-cta-slider__container {
     @include media('>md') {
       box-shadow: 0 0 16px 5px rgba(0, 0, 0, 0.2);
+
+      .paragraph--type-banner-cta-slide {
+        height: 560px !important;
+      }
     }
 
     .component-banner-cta-slider__pseudo-prev-button,
