--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--banner-cta-slider.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--banner-cta-slider.scss
@@ -133,6 +133,7 @@
         .field--type-link {
           grid-column: 2;
           grid-row: 1 / 3;
+          text-align: right;
         }
       }
     }
