VYRKCATG-152-ct-white-space-at-the-bottom-of-site
- adding back the margin to the footer
- adding negative bottom margin to search results content

--- a/source/themes/custom/crescenttool/styles/libraries/node/search-index.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/search-index.scss
@@ -151,6 +151,7 @@
 
 .region-post-content {
   background-color: $primary-red;
+  margin-bottom: -5rem;
   position: relative;
 
   .view-search__header-product-results {
