--- a/source/themes/custom/crescenttool/styles/libraries/region/footer.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/region/footer.scss
@@ -24,6 +24,8 @@ $footer-bp-mobile: '<sm';
 .region-footer {
   @include container-full-width();
 
+  margin-top: 5rem;
+
   .region-footer__inner-container {
     display: grid;
   }
