--- a/source/themes/custom/crescenttool/styles/libraries/view/new-products.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/view/new-products.scss
@@ -33,7 +33,7 @@
     }
 
     .filter-icon {
-      @include icon('sort', after);
+      @include icon('filter', after);
     }
 
     @include media('>=md') {
