ProductByTrade: Outputting the product by trade.

--- a/docroot/themes/custom/crescenttool/templates/node/node--product-trade--full.html.twig
+++ b/docroot/themes/custom/crescenttool/templates/node/node--product-trade--full.html.twig
@@ -85,6 +85,7 @@
   <div{{ content_attributes }}>
     {{ content }}
     <div class="product-industry-view-section">
+      {{ filters }}
       {{ view }}
     </div>
   </div>
