Added min height to inner part of mobile cards Fixed linter error

--- a/source/themes/custom/crescenttool/styles/libraries/view/search.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/view/search.scss
@@ -61,6 +61,7 @@
       }
 
       .node__content {
+        min-height: 25rem;
         padding: 0.5rem 0.5rem 0;
       }
     }
@@ -327,5 +328,5 @@
       }
     }
   }
-  
+
 }
