--- a/source/themes/custom/crescenttool/styles/libraries/node/full--product-brand.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/full--product-brand.scss
@@ -228,6 +228,7 @@
 
       .sort-icon {
         @include icon('sort', after);
+        display: none; // Until issues with javascript on brand pages are resolved.
       }
 
       @include media('>=md') {
@@ -235,7 +236,6 @@
           visibility: hidden;
         }
       }
-
     }
 
     .view-content {
