--- a/docroot/themes/custom/gearwrench/templates/node/node--product--full.html.twig
+++ b/docroot/themes/custom/gearwrench/templates/node/node--product--full.html.twig
@@ -101,11 +101,13 @@
             <div class="product-detail-slider__thumbs-outer-wrapper">
               <button
                 class="product-detail-slider__button product-detail-slider__button-prev swiper-button-prev"></button>
+
               <div class="product-detail-slider__thumbs-container">
                 <div class="product-detail-slider__thumbs-wrapper">
                   {{ thumbnails }}
                 </div>
               </div>
+
               <button
                 class="product-detail-slider__button product-detail-slider__button-next swiper-button-next"></button>
             </div>
@@ -118,16 +120,20 @@
           <h1>
             {{ content.field_long_description }}
           </h1>
+
           <span class="sku">{{ label }}</span>
+
           <div class="product-detail-content-container__rating-container">
             <!--Price Spider Rating widget goes here-->
             <div class="node__buy-now-button ps-widget" ps-sku="{{ sku }}"></div>
           </div>
         </header>
-        <div class="product-detail-content-container__utility-container">
-        </div>
+        <div class="product-detail-content-container__utility-container"></div>
+
         <h3>Features</h3>
+
         {{ page_top_products_features }}
+
         <span class="more-features-link"><a href="#features">See More Features</a> </span>
       </div>
     </div>
@@ -141,6 +147,7 @@
               {% include directory ~ '/icons/logo.svg' %}
             </a>
           </div>
+
           <ul class="node--type-product-tabs__nav">
             <li class="node--type-product-tabs__nav-item">
               <a href="#features">{{ 'Features'|t }}</a></li>
@@ -155,41 +162,51 @@
           <div class="node--type-product-tabs__mobile-nav-item">
             <a href="#features">{{ 'Features'|t }}</a>
           </div>
+
           <section class="node--type-product-tabs-tab">
             <div class="node--type-product__accordion-content">
               <div class="node--type-product__accordion-content-header">
                 {{ 'Features'|t }}
               </div>
+
               {{ content.field_product_features }}
             </div>
           </section>
+
           <div class="node--type-product-tabs__mobile-nav-item">
             <a href="#specifications">{{ 'Specifications'|t }}</a>
           </div>
+
           <section class="node--type-product-tabs-tab">
             <div class="node--type-product__accordion-content">
               <div class="node--type-product__accordion-content-header">
                 {{ 'Specifications'|t }}
               </div>
+
               {{ content.field_product_specifications }}
             </div>
           </section>
+
           <div class="node--type-product-tabs__mobile-nav-item">
             <a href="#reviews-questions">{{ 'Reviews & Questions'|t }}</a>
           </div>
+
           <section class="node--type-product-tabs-tab">
             <div class="node--type-product__accordion-content">
               <div class="node--type-product__accordion-content-header">
                 {{ 'Reviews & Questions'|t }}
               </div>
+
               <div class="node--type-product__ps-reviews-container">
                 <div class="ps-widget" ps-config="5d66ebae332829002b90e9f3" ps-sku="{{ sku }}"></div>
               </div>
+
               <div data-bv-show="reviews" data-bv-product-id="{{ sku }}"></div>
             </div>
           </section>
         </div>
       </div>
+
       {% if related_items %}
         <div class="node--type-product-related-products__nav-wrapper">
           <div class="node--type-product-related-products__nav-logo-wrapper">
@@ -197,14 +214,16 @@
               {% include directory ~ '/icons/logo.svg' %}
             </a>
           </div>
+
           <div class="node--type-product-related-products__nav-content">
             <h4>{{ 'Related Products'|t }}</h4>
           </div>
         </div>
+
         {{ related_items }}
       {% endif %}
-      {{ content|without('field_long_description','field_product_images', 'field_product_features', 'field_product_specifications',) }}
 
+      {{ content|without('field_long_description','field_product_images', 'field_product_features', 'field_product_specifications',) }}
     </div>
   </div>
 </article>
